# apertium-kaz-kaa

./: .gitattributes  .gitignore  Makefile.am  README  apertium-kaz-kaa.kaa-kaz.lrx  apertium-kaz-kaa.kaz-kaa.dix  apertium-kaz-kaa.kaz-kaa.lrx  apertium-kaz-kaa.kaz-kaa.t2x  configure.ac  update-morphs.bash
corpus/: corpus.kaz.txt
dev/: add_stems.py  bidix.tsv  buddizm.txt  ods-to-tsv.sh  process-tsv.py  proper-nouns.dix
test/: kaa-kaz-biltrans-expected.txt  kaa-kaz-chunker-expected.txt  kaa-kaz-chunker2-expected.txt  kaa-kaz-disam-expected.txt  kaa-kaz-generator-expected.txt  kaa-kaz-input.txt  kaa-kaz-morph-expected.txt  kaa-kaz-postgen-expected.txt  kaa-kaz-pretransfer-expected.txt  kaz-kaa-biltrans-expected.txt  kaz-kaa-chunker-expected.txt  kaz-kaa-chunker2-expected.txt  kaz-kaa-disam-expected.txt  kaz-kaa-generator-expected.txt  kaz-kaa-morph-expected.txt  kaz-kaa-postgen-expected.txt  kaz-kaa-pretransfer-expected.txt  tests.json
test-scripts/: kaa-kaz-corp.test  kaz-kaa-corp.test
testvoc/lite/: testvoc-summary.kaz-kaa.txt
texts/: buddizm.kaz.txt  story.kaa.postedit.txt  story.kaa.txt
